<resources>
    <string name="app_name">Fitness</string>

    <!-- Title -->
    <string name="set">세트</string>
    <string name="date">날짜</string>
    <string name="time">시간</string>
    <string name="part">부위</string>
    <string name="name">이름</string>
    <string name="rep_and_wt">횟수 &amp; 무게</string>

    <!-- Btn -->
    <string name="stop">정지</string>
    <string name="record">기록</string>
    <string name="start">시작</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="temp">임시저장</string>

    <!-- Hint -->
    <string name="hint_name">운동 이름</string>
    <string name="hint_part">운동 부위</string>
    <string name="hint_set">세트 수</string>
    <string name="hint_search">검색어를 입력하시오</string>
    <string name="hint_color">색상</string>

    <!-- Rest -->
    <string name="str_division">:</string>
    <string name="str_set_initial">0</string>
    <string name="light_theme">밝은 테마</string>
    <string name="dark_theme">어두운 테마</string>
    <string name="default_theme">시스템 값</string>

    <!-- String array -->

    <!-- Init list -->
    <string-array name="init_parts_list">
        <item>가슴</item>
        <item>등</item>
        <item>하체</item>
        <item>어깨</item>
        <item>삼두</item>
        <item>이두</item>
        <item>복근</item>
    </string-array>

    <string-array name="init_colors_list">
        <item>FFDB4455</item>
        <item>FFFF7F00</item>
        <item>FFFDFD96</item>
        <item>FF008000</item>
        <item>FF4AA8D8</item>
        <item>FF0E0F37</item>
        <item>FF8B00FF</item>
    </string-array>

    <!-- Calendar -->
    <string-array name="calendar_days_of_week">
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>일</item>
    </string-array>

    <string-array name="calendar_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <!-- rest -->
    <string-array name="search_division">
        <item>이름</item>
        <item>부위</item>
    </string-array>

    <string-array name="setting_title">
        <item>테마</item>
        <item>부위 및 색상</item>
    </string-array>

</resources>