<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.OneRecordActivity">

    <LinearLayout
        android:id="@+id/linear_o_record_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <!-- 날짜 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/n_picker_o_record_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/n_picker_o_record_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/n_picker_o_record_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- 시간 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/n_picker_o_record_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/str_division"
            android:textSize="15sp" />

        <NumberPicker
            android:id="@+id/n_picker_o_record_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_o_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_o_record_date"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:orientation="horizontal" >

        <!-- 부위 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/part"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/spinner_o_record_part"
            android:layout_width="150dp"
            android:layout_height="48sp"
            tools:ignore="SpeakableTextPresentCheck" />

        <!-- 이름 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_o_record_name"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:hint="@string/hint_name"
            android:textSize="15sp"
            android:inputType="text"
            android:importantForAutofill="no" />

        <!-- 세트 -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/set"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edit_o_record_set"
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:hint="@string/hint_set"
            android:inputType="number"
            android:imeOptions="actionNext"
            android:textSize="15sp"
            android:importantForAutofill="no" />

        <!-- 횟수 & 무게 -->

        <TextView
            android:id="@+id/text_o_record_rep_and_wt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:text="@string/rep_and_wt"
            android:textSize="15sp" />

    </GridLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/grid_o_record"
        android:layout_above="@+id/linear_o_record_btn"
        android:layout_alignParentStart="true"
        tools:ignore="SpeakableTextPresentCheck" >

        <GridLayout
            android:id="@+id/grid_o_record_rep_and_wt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:columnCount="12" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_o_record_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" >

        <Button
            android:id="@+id/btn_o_record_complete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            tools:ignore="SpeakableTextPresentCheck,VisualLintBounds" />

        <Button
            android:id="@+id/btn_o_record_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/delete"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_o_record_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:text="@string/cancel"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>


</RelativeLayout>