<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/g_radio_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/b_radio_theme_light"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/b_radio_theme_dark"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/b_radio_theme_default"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/default_theme"
            android:textSize="15sp" />

    </RadioGroup>

</LinearLayout>